--- a/index.html
+++ b/index.html
@@ -14,3 +14,37 @@
     <h3>Otsikko 3</h3>
     <hr>
     <img src="https://i.kym-cdn.com/entries/icons/original/000/041/742/cover3.jpg" alt="a silly cat" height="400" width="">
+    <video width="400" height="" controls>
+      <source src="img/cat.mp4" type="video/mp4">
+    </video>
+    <table>
+      <tr>
+        <th>1</th>
+        <th>2</th>
+        <th>3</th>
+      </tr>
+      <tr>
+        <th>4</th>
+        <th>5</th>
+        <th>6</th>
+      </tr>
+      <tr>
+        <th>7</th>
+        <th>8</th>
+        <th>9</th>
+      </tr>
+    </table>
+    <ol type="I">
+      <li>goofy</li>
+      <li>silly</li>
+      <li>blehhh</li>
+    </ol>
+    <ul style="list-style-type:square;">
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+    </ul>
+    <q>goofy and silly cats are very goofy and silly</q>
+    <i>-Veeti Kolehmainen</i>
+  </body>
+</html>
