--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <nav>
       <a href="#">Home</a>
-      <a href="file:///C:/Users/veetikolehmainen2/OneDrive%20-%20Luksia/school%20html/sdasf/blehhh.html">placeholder</a>
+      <a href="file:///C:/Users/veetikolehmainen2/OneDrive%20-%20Luksia/school%20html/sdasf/blehhh.html">BLEHHH</a>
     </nav>
     <h1>Otsikko 1</h1>
     <h2>Otsikko 2</h2>
