--- a/blehhh.html
+++ b/blehhh.html
@@ -9,6 +9,9 @@
       <a href="file:///C:/Users/veetikolehmainen2/OneDrive%20-%20Luksia/school%20html/sdasf/index.html">Home</a>
       <a href="#">BLEHHH</a>
     </nav>
-    <img src="https://i.kym-cdn.com/entries/icons/original/000/041/742/cover3.jpg" alt="a silly cat" height="1000" width="">
+    <figure>         
+      <img src="https://i.kym-cdn.com/entries/icons/original/000/041/742/cover3.jpg" alt="blehhh" height="1000" width="">         
+      <figcaption>cat with tongue out</figcaption>     
+    </figure>
   </body>
 </html>
